2018-04-28  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.ac src/term.h:  ./configure --without-tektronix
	to disable support for various 1970s/80s era terminal emulators.
	Terminal types included (or not):
	  tek410x tek40 vttek xterm kc_tek40 km_tek40 selanar sixeltek bitgraph
	Notes:
	To actually include some of these it is also necessary to enable
	the generic bitmap code:
	  ./configure --with-tektronix --with-bitmap-terminals
	Unless for some reason you really need to communicate using tektronix
	terminal graphics protocol, the prefered option is to use a terminal
	emulator that supports the vt100 series sixel graphics protocol and
	select the sixelgd terminal in gnuplot.  You do not need the tektronix
	terminal code for this.

2018-04-16  Miroslav Sulc <msulc@users.sourceforge.net>

	* src/internal.c (f_div cmplx_divide):  Avoid overflow during complex
	division (actually all floating point division).
	Use formula 5.4.5 from Numerical Recipes 2nd Edition to prevent
	avoidable overflow, underflow, and/or loss of precision.
	E.g. the result of 1.e200/1.e200 is 1.0 rather than NaN, and
	1/1.e200 is 1.e-200 rather than 0.

2018-04-15  Miroslav Sulc <msulc@users.sourceforge.net>

	* src/eval.c src/specfun.c src/specfun.h:

	Add function besin(n,x), modified Bessel function of order n for
	integer n.  The code is based on that for iv(v, x) as implemented in
	scipy (from numpy). Accuracy was tested by comparing output from
	scipy and gnuplot.  The underlying function iv(v,x) accepts fractional v
	but does not converge well for non-integer values.  Thus besin(n,x)
	limits the domain to integer n.

2018-04-06  Miroslav Sulc <msulc@users.sourceforge.net>

	* src/eval.c src/standard.c src/standard.h:

	Add functions besi0(x) besi1(x), modified Bessel functions of order
	0 and 1.  The code is adapted from the cephes library
	 http://www.netlib.org/cephes/index.html
	claimed accuracy is 6e-16 for besi0()  2e-15 for besi1() using